# DriveSafe

./: .gitignore  CMakeLists.txt  ClassifierforSVMLight.cpp  ClassifierforSVMLight.h  HOG.cpp  HOG.h  HOGforSVMLight.cpp  HOGforSVMLight.h  README.md  TestSVM.cpp  TestVideos.cpp  TestVideos.h  TrainSVM.cpp  TrainSVM.h  main.cpp  nma.sh
HOG/: CMakeLists.txt  HOG.cpp  HOG.h  bk.cpp
HOG2/: CMakeLists.txt  HOG2.cpp
Main/: Main.cpp
TestOneImage/: CMakeLists.txt  TestSVM.cpp
TestSVM/: CMakeLists.txt  TestSVM.cpp  testSVM.cpp
TrainSVM/: CMakeLists.txt  TrainSVM.cpp
classification/: TestSVM.cpp  TestSVM.h  TestVideos.cpp  TestVideos.h
svmlight_hog/: ClassifierforSVMLight.cpp  HOGforSVMLight.cpp  HOGforSVMLight.h  SvmLightLib.cpp  SvmLightLib.h
training/: TrainSVM.cpp  TrainSVM.h
